--- a/app/src/main/res/values/domande_capitolo_4.xml
+++ b/app/src/main/res/values/domande_capitolo_4.xml
@@ -119,7 +119,8 @@
         \\mbox{\\textit{\\textbf{Soluzione 4.7}}
         \\\\
         \\;
-        \\\\Se $I$ è un intervallo $n$-dimensionale, si ha:}
+        \\\\Se $I$ è un intervallo $n$-dimensionale,
+        \\\\si ha:}
         \\\\ \\;
         \\\\ \\qquad L^∗_n(I) = vol_n(I)
     </string>
@@ -197,7 +198,8 @@
     <string name="domanda_4_13">
         \\mbox{Quali sono le proprietà della
         \\\\classe delle funzioni semplici
-        \\\\rispetto a somme, prodotti e quozienti?}
+        \\\\rispetto a somme, prodotti e
+        \\\\quozienti?}
     </string>
     <string name="soluzione_4_13">
         \\mbox{\\textit{\\textbf{Soluzione 4.13}}
@@ -206,19 +208,26 @@
         \\\\Siano $A \\in M_n$, $f, g : A \\to R$ semplici.
         \\\\Allora:
         \\\\ \\;
-        \\\\ \\textit{a)} $f+g$ e $fg$ sono semplici.
+        \\\\ \\textit{a)}\\ $f+g$ e $fg$ sono semplici.
         \\\\ \\;
-        \\\\ \\textit{b)} Se $\\forall x\\in A\\; g(x)\\ne 0$, $\\frac{f}{g}$ è semplice.
+        \\\\ \\textit{b)}\\ Se $\\forall x\\in A\\; g(x)\\ne 0$, $\\frac{f}{g}$ è semplice.
         }
     </string>
     <string name="domanda_4_14">
-        \\mbox{domanda 4.14}
+        \\mbox{Come si definisce l\'integrale di una
+        \\\\funzione semplice non negativa?}
     </string>
     <string name="soluzione_4_14">
         \\mbox{\\textit{\\textbf{Soluzione 4.14}}
         \\\\
         \\;
-        \\\\
+        \\\\Siano $A \\in M_n$, $f : A → R$ semplice, a valori non negativi.
+        \\\\Poniamo}
+        \\\\ \\;
+        \\\\\\quad \\int_A f(x) dx := \\alpha_1L_n(A_1) + \\dots + \\alpha_mL_n(A_m) = \\sum_{i=1}^m \\alpha_iL_n(A_i)
+        \\\\ \\;
+        \\\\\\mbox{Chiameremo $\\int_A f(x) dx$ integrale (nel senso di Lebesgue)
+        \\\\di $f$ su $A$.
         }
     </string>
     <string name="domanda_4_15">
@@ -248,13 +257,25 @@
 
     </string>
     <string name="domanda_4_17">
-        \\mbox{domanda 4.17}
+        \\mbox{Che cosa si può dire di somme,
+        \\\\prodotti e quozienti di funzioni
+        \\\\misurabili?}
     </string>
     <string name="soluzione_4_17">
         \\mbox{\\textit{\\textbf{Soluzione 4.17}}
         \\\\
         \\;
-        \\\\
+        \\\\Siano $A \\in M_n$, $f, g : A \\to R$ misurabili,
+        \\\\$h : R \\to R$ continua, $c \\in R$. Allora:
+        \\\\ \\;
+        \\\\ \\textit{a)} $f + g$ e $fg$ sono misurabili
+        \\\\ \\;
+        \\\\ \\textit{b)} Se $g(x) \\ne 0\\ \\forallx \\in A$, $\\frac fg$
+        \\\\\\qquad è misurabile
+        \\\\ \\;
+        \\\\ \\textit{c)} $h \\circ f$ è misurabile
+        \\\\ \\;
+        \\\\ \\textit{d)} $cf$ è misurabile.
         }
     </string>
     <string name="domanda_4_18">
@@ -330,9 +351,9 @@
         \\\\
         \\;
         \\\\Siano $a, b \\in R$, con $a &#60; b$, $f : [a, b] \\to R$
-        \\\\integrabile nel senso di Riemann. Allora $f$ è sommabile e
-        \\\\l’integrale nel senso di Lebesgue di $f$ coincide con
-        \\\\l’integrale nel senso di Riemann.
+        \\\\integrabile nel senso di Riemann. Allora $f$ è
+        \\\\sommabile e l’integrale nel senso di Lebesgue di $f$
+        \\\\coincide con l’integrale nel senso di Riemann.
         }
     </string>
     <string name="domanda_4_25">
